# Not_Market

./: comand.py  connect_db.py  create_db.py  filling_tables.py  main.py  menu.py  pyproject.toml
models/: __init__.py  orders.py  products.py  tickets.py  users.py
