[tool.poetry]
name = "project-poerty"
version = "0.1.0"
description = ""
authors = ["bakashev <bakashevs@mail.ru>"]
readme = "README.md"
packages = [{include = "project_poerty"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
sqlalchemy = "^2.0.12"
psycopg2 = "^2.9.6"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
